--- a/index.HTML
+++ b/index.HTML
@@ -7,6 +7,7 @@
     <title>NINTENDO GAME CHARACTERS</title>
 </head>
 <body>
+    <div id="header">NINTENDO GAME CHARACTERS</div>
     <script src="app.js"></script>
 </body>
 </html>
