--- a/index.HTML
+++ b/index.HTML
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id="header">NINTENDO GAME CHARACTERS</div>
+
+    <input type="text" id="search-input" placeholder="search by name">
     <script src="app.js"></script>
 </body>
 </html>
