--- a/index.HTML
+++ b/index.HTML
@@ -10,6 +10,10 @@
     <div id="header">NINTENDO GAME CHARACTERS</div>
 
     <input type="text" id="search-input" placeholder="search by name">
+
+    <select id="filter-select">
+        
+    </select>
     <script src="app.js"></script>
 </body>
 </html>
