HTML all option filter

--- a/index.HTML
+++ b/index.HTML
@@ -12,7 +12,7 @@
     <input type="text" id="search-input" placeholder="search by name">
 
     <select id="filter-select">
-        
+        <option value="all">All</option>
     </select>
     <script src="app.js"></script>
 </body>
