HTML liked option

--- a/index.HTML
+++ b/index.HTML
@@ -13,6 +13,7 @@
 
     <select id="filter-select">
         <option value="all">All</option>
+        <option value="liked">Liked</option>
     </select>
     <script src="app.js"></script>
 </body>
