--- a/index.HTML
+++ b/index.HTML
@@ -15,6 +15,9 @@
         <option value="all">All</option>
         <option value="liked">Liked</option>
     </select>
+
+    <div id="amiibo-container"></div>
+
     <script src="app.js"></script>
 </body>
 </html>
